# qr_app

./: Cargo.toml  README.md  build.rs
src/: lib.rs  main.rs  ui.slint
